--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   image_picker: ^0.6.7+4
   path_provider: ^1.6.11
   path: 1.6.4
+  sqflite: ^1.3.0
+  location: ^3.0.2
 
 
   # The following adds the Cupertino Icons font to your application.
